objects/PEPE_BLP_COURSE__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <label>Architecture</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_ID__c</fullName>
        <label>BLP Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Site_Id__c</fullName>
        <label>BLP Site Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Site_Name__c</fullName>
        <label>BLP Site Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLC_Redemption__c</fullName>
        <label>CLC Redemption</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COURSE_ID__c</fullName>
        <label>Course Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Acronym__c</fullName>
        <label>Course Acronym</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Keyword__c</fullName>
        <label>Custom Keyword</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Days__c</fullName>
        <label>Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <label>Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dw_Applicability__c</fullName>
        <label>Dw Applicability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dw_Id__c</fullName>
        <label>DW Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery__c</fullName>
        <label>Estimated Delivery</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Learning_Objectives__c</fullName>
        <label>Learning Objectives</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Course_Information__c</fullName>
        <label>Other Course Information</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outline__c</fullName>
        <label>Outline</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <label>Prerequisites</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <label>Private</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sfdc_Course_Code__c</fullName>
        <label>Sfdc Course Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Requirement__c</fullName>
        <label>System Requirement</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskJobRole__c</fullName>
        <label>TaskJobRole</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theatre__c</fullName>
        <label>Theatre</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_Should_Attend__c</fullName>
        <label>Who Should Attend</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <description>For NOv 2016 Release Activity</description>
    <label>BLP_Course</label>
    <nameField>
        <label>BLP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLP_Course</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>